<resources>
    <string name="app_name">Knufficast</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_queue">Queue</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh_feeds">Refresh Feeds</string>
    <string name="search_feed_hint">Search or enter URL</string>
    <string name="search_result_feed_url">Feed URL: %s</string>
    <string name="add_feed_progress_title">Subscribing to the feed&#8230;</string>
    <string name="add_feed_progress_message">Please stand by while I go and fetch the feed data.</string>
    <string name="add_feed_failed">Adding the feed failed.</string>
    <string name="title_activity_feed_detail">Feed details</string>
    <string name="title_activity_episode_detail">Episode details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_feed_search">Add feed</string>
    <string name="enqueue">Enqueue</string>
    <string name="dequeue">Dequeue</string>
    <string name="download_state_no_download">Nothing to download</string>
    <string name="download_state_none">Not downloaded</string>
    <string name="download_state_downloading">Downloading&#8230;</string>
    <string name="download_state_error">Error</string>
    <string name="download_state_paused">Paused</string>
    <string name="playing_state_none">Not listened to</string>
    <string name="playing_state_playing">Listened to %1$s of %2$s</string>
    <string name="flattring_state_none">Not flattred</string>
    <string name="flattring_state_error">Could not flattr. Check the settings.</string>
    <string name="flattring_state_enqueued">In flattr-queue&#8230;</string>
    <string name="flattring_state_flattred">flattred</string>
    <string name="menu_add_feed">Add feed&#8230;</string>
    <string name="menu_delete_download">Delete download</string>
    <string name="menu_flattr">flattr this</string>
    <string name="menu_unsubscribe_feed">Unsubscribe</string>
    <string name="intent_add_feed">Subscribe in Knufficast</string>
    <string name="refreshing_feeds">Refreshing feeds&#8230;</string>
    <string name="refreshed_feed_success">Refreshed feed %s</string>
    <string name="refreshed_feeds_success_all">Successfully refreshed all feeds.</string>
    <string name="refreshed_feed_error">Error refreshing feed %s! :(</string>
    <string name="refreshed_feeds_error_some">Could not refresh some feeds! :(</string>
    <string name="pref_updater">Feed Updates</string>
    <string name="pref_title_auto_enqueue">Auto-Enqueue</string>
    <string name="pref_summary_auto_enqueue">Automatically enqueue new episodes</string>
    <string name="pref_dialog_title_update_freq">Set update frequency</string>
    <string name="pref_title_update_freq">Update frequency</string>
    <string name="pref_summary_update_freq">Refresh feeds %s</string>
    <string name="pref_title_update_needs_wifi">Feed updates: WiFi only</string>
    <string name="pref_summary_update_needs_wifi">Refresh feeds only on WiFi</string>
    <string name="pref_downloads">Downloads</string>
    <string name="pref_title_download_auto_retry">Auto-Retry enqueued</string>
    <string name="pref_summary_download_auto_retry">Automatically restart failed downloads</string>
    <string name="pref_title_auto_delete">Auto-Delete dequeued</string>
    <string name="pref_summary_auto_delete">Automatically delete dequeued downloads</string>
    <string name="pref_title_download_needs_wifi">Download: WiFi only</string>
    <string name="pref_summary_download_needs_wifi">Download episodes only on WiFi</string>
    <string name="pref_flattr">Flattr</string>
    <string name="pref_summary_flattr_account">Log in to flattr&#8230;</string>
    <string name="pref_title_flattr_account">Account settings</string>
    <string name="pref_summary_auto_flattr">Automatically flattr fully listened episodes</string>
    <string name="pref_title_auto_flattr">Auto-flattr</string>
    <string name="flattr_auth_error">Not authenticated</string>
    <string name="flattr_authenticating">Logging in&#8230;</string>
    <string name="flattr_no_error">Flattr is up and running</string>
    <string name="flattr_no_means">Your Flattr account ran out of money!</string>
    <string name="delete_feed_title">Really unsubscribe?</string>
    <string name="delete_feed_message">This will delete all information stored about this feed, including downloads, listening progress and enqueued episodes.</string>
    <string name="delete_feed_confirm">Yes</string>
    <string name="delete_feed_cancel">No</string>
    <string name="min_15">every 15 Minutes</string>
    <string name="hour_1">every hour</string>
    <string name="hour_6">every 6 hours</string>
    <string name="day_1">every day</string>
    <string name="week_1">every week</string>
    <string name="tap_plus_to_add_feed">You have no subscriptions. Tap the plus to add some.</string>
    <string name="episode_progress_downloaded">downloaded</string>
    <string name="episode_progress_listened">listened</string>
    <string name="episode_progress_flattred">flattred</string>
    <string name="internal_flattr_authurl">https://flattr.com/oauth/authorize?response_type=code&amp;client_id=0XW1mQCZ4t6sFMOwe3NWHIDTBwQGGi6x&amp;redirect_uri=knufficastoauth://&amp;scope=flattr</string>
    <string name="description_play_button">Play/Pause</string>
    <string name="description_fast_forward_button">Fast Forward</string>
    <string name="description_rewind_button">Rewind</string>
    <string name="description_feed_icon">Feed Icon</string>
    <string name="description_episode_icon">Episode Icon</string>
</resources>