<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/episode_detail_fragment">

    <LinearLayout
        android:id="@+id/episode_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/episode_icon"
            android:contentDescription="@string/description_episode_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/episode_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/episode_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

        <ProgressBar
            android:id="@+id/episode_download_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/episode_download_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episode_progress_downloaded"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ProgressBar
            android:id="@+id/episode_listening_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/episode_listening_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episode_progress_listened"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ProgressBar
            android:id="@+id/episode_flattring_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/episode_flattring_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episode_progress_flattred"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <WebView
        android:id="@+id/episode_description_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/episode_enqueue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enqueue" />

</LinearLayout>