<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:splitMotionEvents="false" >

    <de.knufficast.ui.DnDListView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/queue_episode_list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:padding="5dp" >

        <SeekBar
            android:id="@+id/queue_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@android:style/Theme.Holo" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/queue_time_elapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textColor="@android:color/secondary_text_dark" />

            <ImageButton
                android:id="@+id/queue_play_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/description_play_button"
                android:scaleType="fitXY" />

            <ImageButton
                android:id="@+id/queue_rewind_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/queue_play_button"
                android:contentDescription="@string/description_rewind_button"
                android:src="@android:drawable/ic_media_rew" />

            <ImageButton
                android:id="@+id/queue_fast_forward_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="false"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/queue_play_button"
                android:contentDescription="@string/description_fast_forward_button"
                android:src="@android:drawable/ic_media_ff" />

            <TextView
                android:id="@+id/queue_time_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:textColor="@android:color/secondary_text_dark" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>